syntax = "proto3";

package stats.message;

option java_multiple_files = true;
option java_package = "ru.practicum.stats.proto";

message InteractionsCountRequestProto {
  repeated int64 event_id = 1; //идентификаторы мероприятий, для которых нужно вернуть сумму всех взаимодействий.
}